[gd_scene load_steps=6 format=3 uid="uid://joystick_tool_ui"]

[ext_resource type="Script" path="res://src/ui/joystick_tool_ui.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Main"]
bg_color = Color(0.1, 0.1, 0.12, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.4, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Base"]
bg_color = Color(0.05, 0.05, 0.07, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.2, 0.25, 1)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Handle"]
bg_color = Color(0.2, 0.5, 1.0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="JoystickToolUI" type="PanelContainer"]
custom_minimum_size = Vector2(200, 200)
offset_right = 200.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_Main")
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Layout" type="Control" parent="MarginContainer"]
layout_mode = 2

; CENTER STICK
[node name="StickBase" type="Panel" parent="MarginContainer/Layout"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_Base")

[node name="StickHandle" type="Panel" parent="MarginContainer/Layout/StickBase"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 27.0
offset_top = 27.0
offset_right = 43.0
offset_bottom = 43.0
theme_override_styles/panel = SubResource("StyleBoxFlat_Handle")

; ICONS
[node name="IconUp" type="Label" parent="MarginContainer/Layout"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 5.0
offset_right = 20.0
offset_bottom = 35.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "‚úã"
horizontal_alignment = 1

[node name="IconDown" type="Label" parent="MarginContainer/Layout"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -45.0
offset_right = 20.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "üîí"
horizontal_alignment = 1

[node name="IconLeft" type="Label" parent="MarginContainer/Layout"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -20.0
offset_right = 45.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "üñåÔ∏è"
horizontal_alignment = 1

[node name="IconRight" type="Label" parent="MarginContainer/Layout"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -20.0
offset_right = -5.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "‚ûï"
horizontal_alignment = 1
